added patch from Stefan which adds calories support for gpx export
git-svn-id: https://mytourbook.svn.sourceforge.net/svnroot/mytourbook/trunk@1313 5a91af82-4d22-0410-8bcb-a41d7c89129f